cmake_minimum_required(VERSION 3.13)
project(SDL_Tutorials C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(01-sdl_premiere_application/)
add_subdirectory(02-gcn_fade)
add_subdirectory(03-gcn_inputs)
add_subdirectory(04-gcn_sprites-1)
add_subdirectory(05-gcn_sprites-2)
add_subdirectory(06-gcn_sprites-3)
